# learn-wgpu

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  _typos.toml  build.rs  deno.json  deny.toml  main.ts
.cargo/: audit.toml
.github/workflows/: general.yml  links.yml  scorecard.yml  typos.yml
assets/: star.ods
public/: learn_wgpu.js  learn_wgpu_bg.wasm
routes/: index.ts
showcase/framework/: Cargo.toml
showcase/framework/src/: buffer.rs  lib.rs  texture.rs
showcase/gifs/: Cargo.toml
showcase/gifs/src/: main.rs  shader.wgsl
showcase/windowless/: Cargo.toml
showcase/windowless/src/: main.rs
src/: camera.rs  challenge.wgsl  equirectangular.wgsl  hdr.rs  hdr.wgsl  lib.rs  light.wgsl  main.rs  model.rs  resources.rs  shader.wgsl  shader_challenge.wgsl  sky.wgsl  texture.rs
