[package]
name = "learn-wgpu"
version = "0.1.0"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/rodneylab/learn-wgpu"
# cursor-icon v1.1.0 requires Rust 1.65
rust-version = "1.63"
description = "Rust wgpu"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.16", features = ["derive"] }
cfg-if = "1"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"
wgpu = "0.18"
winit = { version = "0.29", features = ["rwh_05"] }

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "0.18", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }
