[package]
name = "learn-wgpu"
version = "0.1.0"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/rodneylab/learn-wgpu"
# wgpu v24 requires Rust 1.83
rust-version = "1.83"
description = "Rust wgpu"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = ["showcase/*"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.96"
bytemuck = { version = "1.21.0", features = ["derive"] }
cfg-if = "1.0.0"
cgmath = "0.18.0"
env_logger = "0.11.6"
# image = { version = "0.25.5", default-features = false, features = ["hdr", "png", "jpeg"] }
image = { version = "0.24.9", default-features = false, features = ["hdr", "png", "jpeg"] }
log = "0.4.25"
pollster = "0.4.0"
tobj = { version = "4.0.3", default-features = false, features = ["tokio"] }
web-time = "1.1.0"
wgpu = "24.0.1"
winit = { version = "0.30.9", features = ["rwh_05"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
reqwest = { version = "0.12.12" }
# wgpu = { version = "24.0.1", features = ["webgl"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "^0.3.77", features = ["Document", "Element", "Location", "Window"] }

[build-dependencies]
anyhow = "1.0.96"
fs_extra = "1.3.0"
glob = "0.3.2"
