[package]
name = "framework"
version = "0.1.0"
authors = ["ben hansen <https://github.com/sotrh>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.16", features = ["derive"] }
cgmath = "0.18"
env_logger = "0.10"
futures-intrusive = "0.5.0"
gif = "0.11.4"
image = "0.25.5"
log = "0.4"
pollster = "0.4.0"
thiserror = "1.0"
tobj = "3.2"
wgpu = "24.0.1"
wgpu-subscriber = "0.1"
winit = { version = "0.29", features = ["rwh_05"] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
naga = { version = "24.0", features = ["glsl-in", "spv-out", "wgsl-out"] }
rayon = "1.5"
