[package]
name = "gifs"
version = "0.1.0"
authors = ["ben hansen <https://github.com/sotrh>"]
edition = "2021"

[[bin]]
name = "gifs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.16", features = ["derive"] }
cgmath = "0.18"
env_logger = "0.10"
futures-intrusive = "0.5.0"
gif = "0.11.4"
image = "0.25.5"
log = "0.4"
pollster = "0.4.0"
tobj = { version = "3.2", default-features = false, features = ["async"] }
wgpu = { version = "24.0.1", features = ["spirv"] }
winit = { version = "0.29", features = ["rwh_05"] }

framework = { version = "0.1.0", path = "../framework" }
